--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#consult">consult</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#about">AboutTTT</a></li>
 								<li><a href="#contact">Contact</a></li>
                                                                 <li><a href="#blog">Blogs</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
