--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 -->
 <html>
 	<head>
+		<link rel="icon" type="image/png" href="images/icon.png"/>
 		<title>Asclepius</title>
-		<link rel="icon" type="image/x-icon" href="\Users\Rahul\Documents\GitHub\asclepiades.github.io\images\favicon.ico">
+		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
