--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/Move_nourish_connect_be_short.png" alt="" /></span>
+								<p>Asclepius aims at achieving health at an overall level both mentally and physically. We see the health of a person as a whole not merely as the presence or absence of the disease. While treating a patient we aim at detoxifying him as a total human being while giving equal importance to the intensity of his disease condition.</p>
+								<p>Patient to us is like a whole subject in which disease is just a mere part. We aim at making a healthier society which can only be achieved if a man is not only healthy at inside but also healthy towards the outside world also which makes a healthy social being. We have witnessed that cure is achieved totally achieved by human's own self in which we act as an mere catalyst only. Cure in all aspect mentally, physically,socially and miasmatically is our only aim which we achieve totally upon the laws laid up by the nature. </p>
+								<p>CHOOSE US AND WITNESS THE POWER OF CURE ACHIEVED BY YOUR OWN SELF. STAY HEALTHY AND GROW A HEALTHIER SOCIETY..</p>
 							</article>
 
 						<!-- consult -->
@@ -102,9 +103,9 @@
                        <!-- Blogs -->
 							<article id="Blogs">
 								<h2 class="major">Blogs</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<span class="image main"><img src="images/sapere aude.jpg" alt="" /></span>
+								<p>Welcome to the thought gallery.</p>
+								<iframe src="https://homoeonix.science.blog" width= "100%" height= "560"></iframe>
 							</article>
 
 
