--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									
 									<li><a href="https://www.facebook.com/prateek006789/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									
-									<li><a href="mailto:prateekchatterjee@gmail.com" class="icon solid fa-envelope"><span class="label">Gmail</span></a></li>
+									<li><a href="mailto:prateekchatterjee719@gmail.com" class="icon solid fa-envelope"><span class="label">Gmail</span></a></li>
 								</ul>
 							</article>
                        <!-- Blogs -->
